--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^1.4.1",
     "@types/node": "^25.0.8",
-    "prisma": "^5.21.1"
+    "apexcharts": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.47",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
+    "vue3-apexcharts": "^1.7.0"
   }
 }
